Fix double scroll bar + logo colour scheme switching

--- a/css/style.css
+++ b/css/style.css
@@ -177,22 +177,21 @@ SCREEN MEDIA RULES
 @media screen{
 
 html, body{
-  overflow-x: hidden;
-  /*font-family: 'Inconsolata', monospace !important;*/
-  /*maybe try Actor*/
-  background-color: #000000;
+  background-color: inherit;
   color: #212121;
   max-height: 100vh;
-  -webkit-transition: all 0.8s ease-out;
-  -moz-transition: all 0.8s ease-out ;
-  -ms-transition: all 0.8s ease-out ;
-  -o-transition: all 0.8s ease-out ;
-  transition: all 0.8s ease-out ;
 }
+
+html {
+  overflow-x: none;
+}
+
+
 
 h1 {
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 300;
+  font-size: 24px;
 }
 
 .container-fluid{
@@ -222,7 +221,7 @@ hr {
 }
 
 .navbar-default{
-  background-color: rgba(122,122,122,0.5);
+  background-color: rgba(122,122,122,0.2);
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
@@ -234,6 +233,7 @@ hr {
 
 .switch, .print{
   opacity: 0.7;
+  font-size: 18px;
 }
 
 
@@ -249,19 +249,23 @@ page{
   width: 100%;
 }
 
+
+
+
+
 ::-webkit-scrollbar {
   width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,0.3);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #555555;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+  -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,0.5);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
   background: #555555;
